project(Week2)

add_subdirectory(Map)
add_subdirectory(Part_2__Vector)
add_subdirectory(Set)
add_subdirectory(vector)

add_executable(const2 const2.cpp)
add_executable(copy_if_example copy_if_example.cpp)
add_executable(coursera coursera.cpp)
add_executable(fuctorial fuctorial.cpp)
add_executable(functions functions.cpp)
